# teslearn

./: .gitignore  README.md  UV_SETUP.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: docs.yml
docs/: Makefile  conf.py  contributing.rst  examples.rst  index.rst  make.bat  quickstart.rst  user_guide.rst
docs/_static/: custom.css
docs/api/: base.rst  cv.rst  data.rst  explain.rst  features.rst  index.rst  io.rst  metrics.rst  models.rst  pipeline.rst  plotting.rst  predict.rst  selection.rst  train.rst  utils.rst  viz.rst
examples/: 01_basic_atlas_classification.ipynb  02_voxel_based_svm.ipynb  03_regression_elastic_net.ipynb  04_hyperparameter_tuning.ipynb
resources/atlas/: HCP-MMP1_cortex_UniqueRegionList.csv  HarvardOxford-sub-maxprob-thr0-1mm.txt  MNI_Glasser_HCP_v1.0.txt  OASIS-TRT-20_DKT31_labels.txt
teslearn/: __init__.py  base.py  cv.py  data.py  explain.py  features.py  io.py  metrics.py  models.py  pipeline.py  plotting.py  predict.py  selection.py  split.py  train.py  utils.py  viz.py
