[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teslearn"
version = "0.1.0"
description = "Machine Learning for Transcranial Electrical Stimulation Responder Prediction"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TESLearn Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    "tms",
    "tcs",
    "tes",
    "transcranial",
    "stimulation",
    "machine-learning",
    "responder-prediction",
    "neuroimaging",
    "nifti",
    "mni",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "nibabel>=3.2.0",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.3.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.9",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "numpydoc>=1.1",
]
all = [
    "teslearn[plotting,dev,docs]"
]

[project.urls]
Homepage = "https://github.com/idossha/teslearn"
Documentation = "https://teslearn.readthedocs.io"
Repository = "https://github.com/idossha/teslearn"
Issues = "https://github.com/idossha/teslearn/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["teslearn*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
teslearn = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["teslearn"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
